# nbos.github.io

./: .gitignore  Makefile  contact.markdown  hackage.markdown  nbos-github-io.cabal  site.hs
css/: default.css  style.css
docs/: CNAME  arith.html  carpe-diem.html  chunk.html  contact.html  count.html  gauss.html  hackage.html  index.html  quoque.html  rosa-rosa-rosam.html  spqr.html  types.html  union.html
docs/count/: count.ipynb
docs/css/: default.css  style.css
docs/doc/: help.html  search-index.js
docs/doc/cont_arith_code/: all.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Decoder8.html  struct.Encoder.html  trait.Model.html  trait.TruncatedDistribution.html  trait.UnivariateDistribution.html  type.Index.html
docs/res/arith/: AB-caveat.py  (+16 more)
posts/: arith.md  carpe-diem.md  chunk.md  count.md  gauss.md  quoque.md  spqr.md  types.md  union.md
res/arith/: 01AB.py  ABA-arith-0.py  ABA-arith-1.py  ABA-arith-phase.py  ABCDEFGH.py  NOT-arith-0.py  NOT-arith-2.py  NOT-arith-3.py  ab.py  alphabet-fill-0.py  alphabet-fill-1.py  arith-.py  binary.py  huffman-dot.py
res/chunk/: evolution.py  functions-factor.py  overfit.py  self.py  stackedarea.py
res/count/: count.ipynb  difference.py  ramanujan.py  stirling.py  table_abbrev.py
res/doc/: crates.js  src-files.js
res/gauss/: alphabet.py  ftc0.py  ftc1-0.py  ftc1-1.py  gauss-cdf.py  gauss-pdf.py  logcdfquantileexp.py  outliercasecodelength.py  outlierresults.csv  outlierresults.py
res/types/: converge.py
resources/doc/: search-index.js
templates/: default.html  index.html  post.html
(+176 files in other folders)
