name:               nbos-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , time == 1.12.2
                  , tagsoup == 0.14.8
                  , pandoc == 3.6.2
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
